--- a/style/index.css
+++ b/style/index.css
@@ -101,9 +101,6 @@ a:hover div{
 	max-width: 50vw;
 	text-align: center;
 }
-.menu.landscape {
-	padding-top: 5vh;
-}
 .fadeIn {
 	opacity: 0;
 	-webkit-transition: opacity 2s ease-in;
@@ -212,10 +209,16 @@ a:hover div{
 	text-align: center;
 	visibility: collapse;
 }
-.overMenu.landscape {
-	padding-top: 5vh;
-}
 .overMenu.show {
 	z-index: 2;
 	visibility: visible;
+}
+.overMenuCover {
+	position: absolute;
+	height: 100%;
+	width: 100%;
+	background-color: black;
+}
+.overMenuCover.hide {
+	visibility: hidden;
 }
