--- a/style/index.css
+++ b/style/index.css
@@ -55,7 +55,7 @@ a {
 	border-radius: 10px;
 	text-align: center;
 }
-a.hover {
+a:hover {
 	color: black;
 	background-color: white;
 }
@@ -83,9 +83,6 @@ a:hover div{
 .toggle div div.checked {
 	background-color: black;
 }
-#gameUI {
-
-}
 #lifeBar {
 	position: absolute;
 	margin: 20px;
@@ -97,6 +94,45 @@ a:hover div{
 .life {
 	width: 20px;
 	padding-right: 10px;
+}
+.hiscoreNotif {
+	position: absolute;
+	padding: 0;
+	top: 0;
+	left: 0;
+	width: 100%;
+	text-align: center;
+	visibility: hidden;
+}
+.hiscoreNotif div div{
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	padding: 0;
+	margin: 0;
+	background-color: black;
+	transition: margin-left .5s linear;
+}
+.hiscoreNotif div {
+	position: relative;
+	padding: 1em 0;
+	margin: 0;
+	background-color: black;
+}
+.hiscoreNotif.show {
+	visibility: visible;
+}
+.hiscoreNotif.show div div {
+	margin-left: 100%;
+}
+.highscoreView {
+	padding: 1em 0;
+}
+.highscoreView div {
+	padding: 0;
+	margin: 0;
 }
 .menu {
 	display: flex;
@@ -175,6 +211,7 @@ a:hover div{
 .gameWindow.vis {
 	display: flex;
 	flex-direction: column;
+	justify-content: center;
 }
 .playArea {
 	padding: 0;
